--- a/.github/workflows/GoogleVPN.yml
+++ b/.github/workflows/GoogleVPN.yml
@@ -2,7 +2,7 @@ name: Sync and Compile Google VPN Rules
 
 on:
   schedule:
-    - cron: '0 18 1 * *'  # 每天北京时间 02:00
+    - cron: '0 18 1 * *'
   workflow_dispatch:
 
 permissions:
@@ -30,36 +30,34 @@ jobs:
             | gunzip -c > /usr/local/bin/mihomo
           chmod +x /usr/local/bin/mihomo
 
-      - name: Generate domain list from googleVPN.list
+      - name: Fetch GoogleVPN.list
         run: |
           mkdir -p rules/Domain
+          curl -sL "https://raw.githubusercontent.com/Rcftngqmgq/ClashRules/Rules/refs/heads/main/rules/Domain/GoogleVPN.list" \
+            -o rules/Domain/GoogleVPN.list
 
-          grep -Eo 'DOMAIN-SUFFIX,[^,]+' rules/Domain/googleVPN.list \
+      - name: Compile GoogleVPN rules
+        run: |
+          grep -Eo 'DOMAIN-SUFFIX,[^,]+' rules/Domain/GoogleVPN.list \
             | sed 's/DOMAIN-SUFFIX,//' \
             | awk '{print "*." $0}' \
             | sort -u \
-            > rules/Domain/googleVPN-domain.list
+            > rules/Domain/GoogleVPN-domain.list
 
-      - name: Convert domain list to YAML
-        run: |
-          echo "payload:" > rules/Domain/googleVPN.yaml
-          awk '{print "  - \047" $0 "\047"}' rules/Domain/googleVPN-domain.list \
-            >> rules/Domain/googleVPN.yaml
+          echo "payload:" > rules/Domain/GoogleVPN.yaml
+          awk '{print "  - \047" $0 "\047"}' rules/Domain/GoogleVPN-domain.list \
+            >> rules/Domain/GoogleVPN.yaml
 
-      - name: Convert YAML to MRS
-        run: |
           mihomo convert-ruleset domain yaml \
-            rules/Domain/googleVPN.yaml \
-            rules/Domain/googleVPN.mrs
+            rules/Domain/GoogleVPN.yaml \
+            rules/Domain/GoogleVPN.mrs
 
-      - name: Clean up intermediate files
-        run: |
-          rm -f rules/Domain/googleVPN-domain.list
+          rm -f rules/Domain/GoogleVPN-domain.list
 
       - name: Commit and push changes
         run: |
-          git add rules/Domain/googleVPN.yaml rules/Domain/googleVPN.mrs
+          git add rules/Domain/GoogleVPN.list rules/Domain/GoogleVPN.yaml rules/Domain/GoogleVPN.mrs
           git diff-index --quiet HEAD -- || (
-            git commit -m "chore: update Google VPN ruleset (mrs)" &&
+            git commit -m "chore: update GoogleVPN ruleset (mrs)" &&
             git push
           )
