--- a/.github/workflows/DirectGR.yml
+++ b/.github/workflows/DirectGR.yml
@@ -2,69 +2,59 @@ name: Sync and Compile DirectGR Rules
 
 on:
   schedule:
-    - cron: '0 18 1 * *'
+    - cron: '0 18 1 * *'  # 北京时间 02:00 执行
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  directgr_rules:
+  DirectGR_rules:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Checkout the repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Git user
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+    - name: Set up Git user
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Install mihomo
-        run: |
-          version=$(curl -sL https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/version.txt)
-          curl -sL "https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/mihomo-linux-amd64-${version}.gz" \
-            | gunzip -c > /usr/local/bin/mihomo
-          chmod +x /usr/local/bin/mihomo
+    - name: Install mihomo
+      run: |
+        version=$(curl -sL https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/version.txt)
+        curl -sL "https://github.com/MetaCubeX/mihomo/releases/download/Prerelease-Alpha/mihomo-linux-amd64-${version}.gz" | \
+          gunzip -c > /usr/local/bin/mihomo && chmod +x /usr/local/bin/mihomo
 
-      - name: Fetch DirectGR.list
-        run: |
-          mkdir -p rules/Domain
-          curl -sL "https://raw.githubusercontent.com/Rcftngqmgq/ClashRules/blob/main/rules/Domain/DirectGR.list" \
-            -o rules/Domain/DirectGR.list
+    - name: Fetch DirectGR Rules
+      run: |
+        mkdir -p rules/Domain  # 确保目录存在
 
-      - name: Generate domain list from DirectGR.list
-        run: |
-          grep -Eo 'DOMAIN-SUFFIX,[^,]+' rules/Domain/DirectGR.list \
-            | sed 's/DOMAIN-SUFFIX,//' \
-            | awk '{print "*." $0}' \
-            | sort -u \
-            > rules/Domain/DirectGR-domain.list
+        # 下载 DirectGR 规则文件
+        curl -sL "https://raw.githubusercontent.com/Rcftngqmgq/ClashRules/refs/heads/main/rules/Domain/DirectGR.list" -o rules/Domain/DirectGR.list
 
-      - name: Convert domain list to YAML
-        run: |
-          echo "payload:" > rules/Domain/DirectGR.yaml
-          awk '{print "  - \047" $0 "\047"}' rules/Domain/DirectGR-domain.list \
-            >> rules/Domain/DirectGR.yaml
+    - name: Extract DOMAIN and DOMAIN-SUFFIX rules from DirectGR.list
+      run: |
+        # 提取 DOMAIN-SUFFIX 规则并加上 *.
+        grep -Eo 'DOMAIN-SUFFIX,[^,]+' rules/Domain/DirectGR.list | sed 's/DOMAIN-SUFFIX,//' | sed 's/^/*./' > rules/Domain/DirectGR-domain.list
+        # 提取 DOMAIN 规则
+        grep -Eo 'DOMAIN,[^,]+' rules/Domain/DirectGR.list | sed 's/DOMAIN,//' >> rules/Domain/DirectGR-domain.list
 
-      - name: Convert YAML to MRS
-        run: |
-          mihomo convert-ruleset domain yaml \
-            rules/Domain/DirectGR.yaml \
-            rules/Domain/DirectGR.mrs
+    - name: Convert DirectGR Rules to YAML
+      run: |
+        echo "payload:" > rules/Domain/DirectGR.yaml
+        sort -u rules/Domain/DirectGR-domain.list | awk '{print "  - \047" $0 "\047"}' >> rules/Domain/DirectGR.yaml
 
-      - name: Clean up intermediate files
-        run: |
-          rm -f rules/Domain/DirectGR-domain.list
+    - name: Convert DirectGR Rules to MRS
+      run: |
+        # 使用 mihomo 转换为 MRS 格式
+        mihomo convert-ruleset domain yaml rules/Domain/DirectGR.yaml rules/Domain/DirectGR.mrs
+        rm -f rules/Domain/DirectGR-domain.list
 
-      - name: Commit and push changes
-        run: |
-          git add rules/Domain/DirectGR.list rules/Domain/DirectGR.yaml rules/Domain/DirectGR.mrs
-          git diff-index --quiet HEAD -- || (
-            git commit -m "chore: update DirectGR ruleset (mrs)" &&
-            git push
-          )
-
+    - name: Commit and Push Changes
+      run: |
+        git add .
+        git diff-index --quiet HEAD -- || (git commit -m "Updated DirectGR rules (DirectGR.list -> DirectGR.mrs)" && git push)
